<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background= "@drawable/gradient_background"
              android:orientation="vertical"
              android:weightSum="4"
              android:theme="@style/AppTheme.NoActionBar"
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_marginTop="56dp"
            android:layout_below="@+id/loginScreenImage"
...
